# flexkey

./: .gitignore  README.md  main.py  pyproject.toml
demo/: example.ipynb
src/flexkey/: __init__.py  dataframe.py  transformations.py
tests/: test_dataframe.py
